refactor: MetadataDatabases.Calls -> Uses (#5072)